--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <div class="col-md-4">
           <ul class="social-network">
             <li><a href="https://www.facebook.com/martin.C.Alonso.90" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/campuzanoalonso/" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/campuzanoalonso/" class="twitter tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.youtube.com/channel/UC5V9WKMy9bPSGosCkgLUEIA" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
           </ul>
         </div>
