--- a/index.html
+++ b/index.html
@@ -385,6 +385,34 @@
             </div>
           </div>
 		
+		<div class="col-md-4 col-sm-6 col-md-offset-2">
+            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+              <div class="media">
+                <div class="pull-left">
+                  <a href="#"><img class="media-object" src="img/cd.jpg" alt=""></a>
+                </div>
+                <div class="media-body">
+                  <h4>Instalación de cámaras</h4>
+                  <ul class="tag clearfix">
+                    <li class="btn"><a href="#">BULLET</a></li>
+                    <li class="btn"><a href="#">CAJA</a></li>
+                    <li class="btn"><a href="#">CUBE</a></li>
+                    <li class="btn"><a href="#">DOMO</a></li>
+                    <li class="btn"><a href="#">OTROS</a></li>
+
+                  </ul>
+                  <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <!--/.media -->
+              <p>Ventas de Cds para entretenimiento</p>
+            </div>
+          </div>
+		
 
 
 		
