--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/cd.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="img/cctv.jpg" alt=""></a>
                 </div>
                 <div class="media-body">
                   <h4>Instalación de cámaras</h4>
@@ -409,7 +409,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>Ventas de Cds para entretenimiento</p>
+              <p>Instalación de cámaras para empresas, negocios, hogares, etc.</p>
             </div>
           </div>
 		
