--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css"> 
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/animate.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" />
@@ -92,12 +92,12 @@
          
 
         <a class="left carousel-control hidden-xs" href="#carousel-slider" data-slide="prev">
-          <i class="fa fa-angle-left"></i>
-        </a>
+					<i class="fa fa-angle-left"></i>
+				</a>
 
         <a class=" right carousel-control hidden-xs" href="#carousel-slider" data-slide="next">
-          <i class="fa fa-angle-right"></i>
-        </a>
+					<i class="fa fa-angle-right"></i>
+				</a>
       </div>
       <!--/#carousel-slider-->
     </div>
@@ -354,6 +354,68 @@
               <p>Nada mejor que distraerse con los mejores juegos que pudieron existir.</p>
             </div>
           </div>
+		
+		
+		
+	<div class="col-md-4 col-sm-6 col-md-offset-2">
+            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+              <div class="media">
+                <div class="pull-left">
+                  <a href="#"><img class="media-object" src="img/cd.jpg" alt=""></a>
+                </div>
+                <div class="media-body">
+                  <h4>Ventas de CD</h4>
+                  <ul class="tag clearfix">
+                    <li class="btn"><a href="#">PELÍCULAS</a></li>
+                    <li class="btn"><a href="#">SERIES</a></li>
+                    <li class="btn"><a href="#">MP3</a></li>
+                    <li class="btn"><a href="#">VIDEOS MUSICALES</a></li>
+                    <li class="btn"><a href="#">OTROS</a></li>
+
+                  </ul>
+                  <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <!--/.media -->
+              <p>Ventas de Cds para entretenimiento</p>
+            </div>
+          </div>
+		
+		<div class="col-md-4 col-sm-6 col-md-offset-2">
+            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+              <div class="media">
+                <div class="pull-left">
+                  <a href="#"><img class="media-object" src="img/cctv.jpg" alt=""></a>
+                </div>
+                <div class="media-body">
+                  <h4>Instalación de cámaras</h4>
+                  <ul class="tag clearfix">
+                    <li class="btn"><a href="#">BULLET</a></li>
+                    <li class="btn"><a href="#">CAJA</a></li>
+                    <li class="btn"><a href="#">CUBE</a></li>
+                    <li class="btn"><a href="#">DOMO</a></li>
+                    <li class="btn"><a href="#">OTROS</a></li>
+
+                  </ul>
+                  <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <!--/.media -->
+              <p>Instalación de cámaras para empresas, negocios, hogares, etc.</p>
+            </div>
+          </div>
+		
+
+
+		
 
 
 
@@ -432,15 +494,14 @@
         <div class="col-md-4">
           <ul class="social-network">
             <li><a href="https://www.facebook.com/martin.C.Alonso.90" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/campuzanoalonso/" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UC5V9WKMy9bPSGosCkgLUEIA" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
+            <li><a href="https://www.instagram.com/campuzanoalonso/" class="twitter tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
       </div>
 
       <div class="col-md-4 col-md-offset-4">
         <div class="copyright">
-          &copy; ProOnliPc Theme. All Rights Reserved.
+         MarTec
           <div class="credits">
             
             <a href="https://www.youtube.com/channel/UCDH0DJaVLkCDtl_YN9hhByw?view_as=subscriber">ProOnliPc Themes</a> by <a href="https://www.youtube.com/channel/UCDH0DJaVLkCDtl_YN9hhByw?view_as=subscriber">ProOnliPc</a>
@@ -462,6 +523,3 @@
 </body>
 
 </html>
-
-
-
