--- a/contact.html
+++ b/contact.html
@@ -246,6 +246,27 @@
               <p>Tal y como puede apreciar en este blog, estamos comprometidos a diseñar páginas web de primera calidad que será un apoyo muy importante dentro de su empresa. Si desea tener un página web única y privada, y por sobre todo crecer en en ámbito publicitario, de manera a sumar frecuentemente el número de clientela, estamos dispuestos a complacer su pedido. </p>
             </div>
           </div>
+		    </div>
+        <!--/.row -->
+        <div class="row team-bar">
+          <div class="first-one-arrow hidden-xs">
+            <hr>
+          </div>
+          <div class="first-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="second-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+          <div class="third-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="fourth-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+        </div>	
+		
+		
 
            <div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
