--- a/contact.html
+++ b/contact.html
@@ -395,6 +395,28 @@
               <p>Nada mejor que distraerse con los mejores juegos que pudieron existir.</p>
             </div>
           </div>
+	     <!--/.row -->
+        <div class="row team-bar">
+          <div class="first-one-arrow hidden-xs">
+            <hr>
+          </div>
+          <div class="first-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="second-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+          <div class="third-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="fourth-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+        </div>
+
+	  
+	  
+	  
 		
 	<div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
