--- a/contact.html
+++ b/contact.html
@@ -321,6 +321,27 @@
               <p>La mejor herramienta ofimática, y en diferentes versiones.</p>
             </div>
           </div>
+	 </div>
+	   <!--/.row -->
+        <div class="row team-bar">
+          <div class="first-one-arrow hidden-xs">
+            <hr>
+          </div>
+          <div class="first-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="second-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+          <div class="third-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="fourth-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+        </div>
+        <!--skill_border-->
+
 
 
            <div class="col-md-4 col-sm-6 col-md-offset-2">
@@ -377,6 +398,7 @@
               <p>Nada mejor que distraerse con los mejores juegos que pudieron existir.</p>
             </div>
           </div>
+	</div>
 		
 		
 		
@@ -407,6 +429,7 @@
               <p>Ventas de Cds para entretenimiento</p>
             </div>
           </div>
+	</div>
 		
 		<div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -435,6 +458,27 @@
               <p>Instalación de cámaras para empresas, negocios, hogares, etc.</p>
             </div>
           </div>
+	</div>
+	 <!--/.row -->
+        <div class="row team-bar">
+          <div class="first-one-arrow hidden-xs">
+            <hr>
+          </div>
+          <div class="first-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="second-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+          <div class="third-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-up"></i>
+          </div>
+          <div class="fourth-arrow hidden-xs">
+            <hr> <i class="fa fa-angle-down"></i>
+          </div>
+        </div>
+        <!--skill_border-->
+
 		
 
 
