--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
               <p>Elaboración de softwares, realizados en diferentes lenguajes de programación.</p>
             </div>
           </div>
+	 </div>
           <!--/.col-lg-4 -->
 
 
@@ -246,6 +247,7 @@
               <p>Tal y como puede apreciar en este blog, estamos comprometidos a diseñar páginas web de primera calidad que será un apoyo muy importante dentro de su empresa. Si desea tener un página web única y privada, y por sobre todo crecer en en ámbito publicitario, de manera a sumar frecuentemente el número de clientela, estamos dispuestos a complacer su pedido. </p>
             </div>
           </div>
+	  </div>
 
            <div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -272,6 +274,7 @@
               <p>Sistemas Operativos más utilizados en la actualidad.</p>
             </div>
           </div>
+	</div> 
 
           <div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -298,6 +301,7 @@
               <p>La mejor herramienta ofimática, y en diferentes versiones.</p>
             </div>
           </div>
+	</div>
 
 
            <div class="col-md-4 col-sm-6 col-md-offset-2">
@@ -326,6 +330,7 @@
               <p>Equipos protegidos al 100% y con mayor seguridad.</p>
             </div>
           </div>
+	</div>
 
            <div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -354,6 +359,7 @@
               <p>Nada mejor que distraerse con los mejores juegos que pudieron existir.</p>
             </div>
           </div>
+	</div>
 		
 		
 		
@@ -384,6 +390,7 @@
               <p>Ventas de Cds para entretenimiento</p>
             </div>
           </div>
+	</div>
 		
 		<div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -412,6 +419,7 @@
               <p>Instalación de cámaras para empresas, negocios, hogares, etc.</p>
             </div>
           </div>
+    	</div>
 		
 
 
