--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             </div>
           </div>
 		
-		<div class="col-md-4 col-sm-6 col-md-offset-2">
+	<div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
@@ -417,6 +417,34 @@
               </div>
               <!--/.media -->
               <p>Instalación de cámaras para empresas, negocios, hogares, etc.</p>
+            </div>
+          </div>
+		
+	<div class="col-md-4 col-sm-6 col-md-offset-2">
+            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+              <div class="media">
+                <div class="pull-left">
+                  <a href="#"><img class="media-object" src="img/backup_board.jpg" alt=""></a>
+                </div>
+                <div class="media-body">
+                  <h4>BACKUP</h4>
+                  <ul class="tag clearfix">
+                    <li class="btn"><a href="#">PENDRIVE</a></li>
+                    <li class="btn"><a href="#">HARD DISK</a></li>
+                    <li class="btn"><a href="#">CD</a></li>
+                    <li class="btn"><a href="#">NUBE</a></li>
+
+
+                  </ul>
+                  <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <!--/.media -->
+              <p>Respaldo de datos, copia de seguridad de archivos.</p>
             </div>
           </div>
     
