--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/cctv.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="img/backup_board.jpg" alt=""></a>
                 </div>
                 <div class="media-body">
                   <h4>Instalación de cámaras</h4>
