--- a/index.html
+++ b/index.html
@@ -421,13 +421,13 @@
                   <a href="#"><img class="media-object" src="img/backup_board.jpg" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4>Instalación de cámaras</h4>
+                  <h4>BACKUP</h4>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">BULLET</a></li>
-                    <li class="btn"><a href="#">CAJA</a></li>
-                    <li class="btn"><a href="#">CUBE</a></li>
-                    <li class="btn"><a href="#">DOMO</a></li>
-                    <li class="btn"><a href="#">OTROS</a></li>
+                    <li class="btn"><a href="#">PENDRIVE</a></li>
+                    <li class="btn"><a href="#">CD</a></li>
+                    <li class="btn"><a href="#">HARD DISK</a></li>
+                    <li class="btn"><a href="#">NUBE</a></li>
+                   
 
                   </ul>
                   <ul class="social_icons">
@@ -438,7 +438,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>Instalación de cámaras para empresas, negocios, hogares, etc.</p>
+              <p>Respaldo de datos, copia de seguridad de archvivos.</p>
             </div>
           </div>
 		
