--- a/about.html
+++ b/about.html
@@ -442,6 +442,32 @@
             </div>
           </div>
 		
+		<div class="col-md-4 col-sm-6 col-md-offset-2">
+            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+              <div class="media">
+                <div class="pull-left">
+                  <a href="#"><img class="media-object" src="img/formateo.png" alt=""></a>
+                </div>
+                <div class="media-body">
+                  <h4>FORMATEO</h4>
+                  <ul class="tag clearfix">
+                    <li class="btn"><a href="#">PC de escritorio</a></li>
+                    <li class="btn"><a href="#">Laptops</a></li>
+                   
+
+                  </ul>
+                  <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <!--/.media -->
+              <p>Formateo de Sistemas Operativos.</p>
+            </div>
+          </div>
+		
 
 
 
