--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="carousel-inner">
           <div class="item active">
-            <img src="img/miFoto.jpg" class="img-responsive" alt="">
+            <img src="img/oficiallogo.png" class="img-responsive" alt="">
             <div class="carousel-caption">
               <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
                 <h2><span>Bienvenido a mi blog</span></h2>
