--- a/services.html
+++ b/services.html
@@ -62,14 +62,13 @@
 
         <div class="carousel-inner">
           <div class="item active">
-            <img src="img/logo.png" class="img-responsive" alt="">
+            <img src="img/oficiallogo.png" class="img-responsive" alt="">
             <div class="carousel-caption">
               <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
                 <h2><span>Bienvenido a mi blog</span></h2>
               </div>
               <div class="col-md-10 col-md-offset-1">
                 <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">
-                  <p>"Emprender para aprender"</p>
                 </div>
               </div>
             </div>
