--- a/index.html
+++ b/index.html
@@ -467,6 +467,35 @@
             </div>
           </div>
 		
+			<div class="col-md-4 col-sm-6 col-md-offset-2">
+            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+              <div class="media">
+                <div class="pull-left">
+                  <a href="#"><img class="media-object" src="img/ins.jpg" alt=""></a>
+                </div>
+                <div class="media-body">
+                  <h4>INSTALACIÓN DE IMPRESORAS</h4>
+                  <ul class="tag clearfix">
+                    <li class="btn"><a href="#">SAMSUNG</a></li>
+                    <li class="btn"><a href="#">CANON</a></li>
+		    <li class="btn"><a href="#">HP</a></li>
+	            <li class="btn"><a href="#">OTROS</a></li>
+                   
+
+                  </ul>
+                  <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <!--/.media -->
+              <p>Instalación de impresoras.</p>
+            </div>
+          </div>
+		
+		
 	<div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
@@ -494,9 +523,8 @@
               <p>Contamos con impresiones</p>
             </div>
           </div>
+
 		
-
-
 
 
         </div>
