--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/ins.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="img/impre.png" alt=""></a>
                 </div>
                 <div class="media-body">
                   <h4>INSTALACIÓN DE IMPRESORAS</h4>
