--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         <div class="col-md-4">
           <ul class="social-network">
             <li><a href="https://www.facebook.com/martin.C.Alonso.90" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/campuzanoalonso/" class="twitter tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/martec_97/" class="twitter tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
       </div>
